test_suite/tests/ui/borrow/duplicate_lifetime.stderr
error: duplicate borrowed lifetime `'a`
  --> $DIR/duplicate_lifetime.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

